--- a/public/about/index.html
+++ b/public/about/index.html
@@ -66,19 +66,11 @@
                 <div class="about-description">
                     <p>Hi, I&rsquo;m <strong>Matheus Mendes</strong>, a passionate software developer with a love for creating elegant solutions to complex problems.</p>
 <h2 id="my-journey">My Journey</h2>
-<p>I started my journey in software development several years ago, driven by curiosity and a desire to build things that matter. Over the years, I&rsquo;ve worked with various technologies and frameworks, always striving to stay current with industry trends and best practices.</p>
+<p>// TODO</p>
 <h2 id="what-i-do">What I Do</h2>
-<p>Currently, I focus on:</p>
-<ul>
-<li><strong>Full-stack web development</strong> using modern frameworks</li>
-<li><strong>Open source contributions</strong> to projects I&rsquo;m passionate about</li>
-<li><strong>Technical writing</strong> to share knowledge with the community</li>
-<li><strong>Continuous learning</strong> and exploring new technologies</li>
-</ul>
-<h2 id="philosophy">Philosophy</h2>
-<p>I believe in writing clean, maintainable code and creating user experiences that are both functional and delightful. When I&rsquo;m not coding, you can find me exploring new technologies, contributing to open source projects, or sharing my knowledge through blog posts and tutorials.</p>
+<p>// TODO</p>
 <h2 id="lets-connect">Let&rsquo;s Connect</h2>
-<p>Feel free to reach out if you&rsquo;d like to collaborate on a project or just want to chat about technology!</p>
+<p><a href="https://www.linkedin.com/in/bigodines">https://www.linkedin.com/in/bigodines</a></p>
 
                 </div>
             </div>
