--- a/public/about/index.html
+++ b/public/about/index.html
@@ -70,7 +70,7 @@
 <h2 id="what-i-do">What I Do</h2>
 <p>// TODO</p>
 <h2 id="lets-connect">Let&rsquo;s Connect</h2>
-<p><a href="https://www.linkedin.com/in/bigodines">https://www.linkedin.com/in/bigodines</a></p>
+<p><a href="https://www.linkedin.com/in/bigodines" target="_blank" rel="noopener">LinkedIn</a></p>
 
                 </div>
             </div>
