--- a/public/about/index.html
+++ b/public/about/index.html
@@ -64,13 +64,15 @@
             <div class="about-text">
                 <h1 class="about-title">About Me</h1>
                 <div class="about-description">
-                    <p>Hi, I&rsquo;m <strong>Matheus Mendes</strong>, a passionate software developer with a love for creating elegant solutions to complex problems.</p>
+                    <p>Hi, I&rsquo;m Matheus Mendes but most of my friends call me <strong>Bigo</strong>. I&rsquo;m a software engineer with 20 years of professional coding experience, 10 of these working in Silicon Valley startups. I recently bought a cool domain name and decided to start a personal log of projects, advice and interesting stories. I have no intention of updating this more than once or twice a year unless major life events happen.</p>
 <h2 id="my-journey">My Journey</h2>
-<p>// TODO</p>
+<p>I was born in Brazil but have been working in the USA since 2013. What started as curiosity about how things work turned into two decades of building software that people actually use. I&rsquo;ve worked at a couple of big techs and 5 startups, experiencing everything from pre-product-market fit chaos to post-acquisition integrations. Three of those startups have been acquired, and I still have two more lottery tickets TBD 🤞</p>
 <h2 id="what-i-do">What I Do</h2>
-<p>// TODO</p>
+<p>Whatever is needed to deliver impact, mostly through coding. Most recently I&rsquo;ve been having a lot of fun leading without authority as a <strong>Senior Staff Software Engineer</strong> at <strong>Honor Technology</strong>. I&rsquo;m particularly drawn to the intersection of technical architecture and team effectiveness - how to learn faster than our competitors in an way that is easy to maintain, change and scale.</p>
 <h2 id="lets-connect">Let&rsquo;s Connect</h2>
 <p><a href="https://www.linkedin.com/in/bigodines" target="_blank" rel="noopener">LinkedIn</a></p>
+<p><strong>Disclaimer:
+Views expressed here are my own and don&rsquo;t represent current or former employers. Most of the stories and examples have been modified to preseve the identity of the people and companies involved.</strong></p>
 
                 </div>
             </div>
