--- a/public/about/index.html
+++ b/public/about/index.html
@@ -78,7 +78,7 @@ Views expressed here are my own and don&rsquo;t represent current or former empl
             </div>
             <div class="about-image">
                 
-                <img src="/images/profile.jpg" alt="Matheus Mendes" class="profile-image">
+                <img src="/img/profile.jpeg" alt="Matheus Mendes" class="profile-image">
                 
             </div>
         </div>
